demo/eu-west-2/describe-security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "123456789012", 
                            "GroupId": "sg-00000001"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000001"
        }
    ]
}
